--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to Play Area! 
-description: This site helps you locate fun places to visit and recreate!
+description: find fun places to go outside and visit!
