--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to Play Area! 
-description: find fun places to go outside and visit!
+description: Find fun places to go outdoors and visit!
