--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to Play Area! 
-description: Places to go things to do!
+title: Welcome to Play Area. 
+description: You've got places to go and things to do.
