--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Play Area 
-description: You've got places to go and things to do.
+description: Places to go and things to do.
